--- a/models/staging/src_jaffle_shop.yml
+++ b/models/staging/src_jaffle_shop.yml
@@ -12,4 +12,13 @@ sources:
           warn_after: {count: 12, period: hour}
           error_after: {count: 24, period: hour}
 
-    
+models:
+  - name: stg_customers
+    columns: 
+      - name: customer_id
+        tests:
+          - unique
+          - not_null
+          
+
+              
